// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  list-style: unset;
  list-style-type: none;
}

.emotion-0 .emotion-0 {
  margin-left: 1rem;
}

.emotion-0 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-List"
>
  Hello world
</div>
`;

exports[`composition hook should return with List props 1`] = `
Object {
  "className": "css-4xx14y css-63it0p css-jwhr8m bb-Box bb-List",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  list-style: unset;
  list-style-type: none;
}

.emotion-0 .emotion-0 {
  margin-left: 1rem;
}

.emotion-0 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-List"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for List.Item 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-12 {
  list-style: unset;
  list-style-type: none;
}

.emotion-12 .emotion-12 {
  margin-left: 1rem;
}

.emotion-12 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

<ul
  class="emotion-12 emotion-1 emotion-2 bb-Box bb-List"
>
  <li
    class="emotion-0 emotion-1 emotion-2 test bb-Box bb-ListItem"
  >
    Item One
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 test bb-Box bb-ListItem"
  >
    Item Two
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 test bb-Box bb-ListItem"
  >
    Item Three
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 test bb-Box bb-ListItem"
  >
    Item Four
  </li>
</ul>
`;

exports[`defaultProps should render correctly for isOrdered 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-12 {
  list-style: unset;
  list-style-type: none;
}

.emotion-12 .emotion-12 {
  margin-left: 1rem;
}

.emotion-12 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-12 {
  list-style-type: decimal;
}

.emotion-12 .emotion-12 {
  list-style-type: lower-alpha;
}

.emotion-12 .emotion-12 .emotion-12 {
  list-style-type: lower-roman;
}

<ol
  class="emotion-12 emotion-1 emotion-2 test bb-Box bb-List"
>
  <li
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
  >
    Item One
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
  >
    Item Two
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
  >
    Item Three
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
  >
    Item Four
  </li>
</ol>
`;

exports[`overrides List.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  list-style: unset;
  list-style-type: none;
}

.emotion-0 .emotion-0 {
  margin-left: 1rem;
}

.emotion-0 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

<ul
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-List"
>
  hello world
</ul>
`;

exports[`props should render a basic list 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-12 {
  list-style: unset;
  list-style-type: none;
}

.emotion-12 .emotion-12 {
  margin-left: 1rem;
}

.emotion-12 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

<ul
  class="emotion-12 emotion-1 emotion-2 bb-Box bb-List"
>
  <li
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
  >
    Item One
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
  >
    Item Two
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
  >
    Item Three
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
  >
    Item Four
  </li>
</ul>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  list-style: unset;
  list-style-type: none;
}

.emotion-0 .emotion-0 {
  margin-left: 1rem;
}

.emotion-0 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

<ul
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-List"
>
  Hello world
</ul>
`;

exports[`props should render correctly as a horizontal list 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-12 {
  list-style: unset;
  list-style-type: none;
}

.emotion-12 .emotion-12 {
  margin-left: 1rem;
}

.emotion-12 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-12.emotion-12.emotion-12 li {
  display: inline-block;
  margin-bottom: unset;
}

.emotion-12.emotion-12.emotion-12 li:not(:last-child) {
  margin-right: 1rem;
}

<ul
  class="emotion-12 emotion-1 emotion-2 bb-Box bb-List"
>
  <li
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
  >
    Item One
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
  >
    Item Two
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
  >
    Item Three
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
  >
    Item Four
  </li>
</ul>
`;

exports[`props should render correctly as an ordered list 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-12 {
  list-style: unset;
  list-style-type: none;
}

.emotion-12 .emotion-12 {
  margin-left: 1rem;
}

.emotion-12 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-12 {
  list-style-type: decimal;
}

.emotion-12 .emotion-12 {
  list-style-type: lower-alpha;
}

.emotion-12 .emotion-12 .emotion-12 {
  list-style-type: lower-roman;
}

<ol
  class="emotion-12 emotion-1 emotion-2 bb-Box bb-List"
>
  <li
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
  >
    Item One
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
  >
    Item Two
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
  >
    Item Three
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
  >
    Item Four
  </li>
</ol>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6 {
  list-style: unset;
  list-style-type: none;
}

.emotion-6 .emotion-6 {
  margin-left: 1rem;
}

.emotion-6 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-8 {
  list-style-position: inside !important;
  list-style-type: disc !important;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-26 {
  list-style-position: inside !important;
  list-style-type: circle !important;
}

.emotion-14 {
  list-style-type: georgian !important;
}

.emotion-23 {
  list-style-type: circle !important;
}

<div>
  <ul
    class="emotion-6 emotion-1 emotion-8 bb-Box bb-List"
  >
    <li
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
    >
      Item 1
    </li>
    <li
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
    >
      Item 2
    </li>
  </ul>
  <ul
    class="emotion-6 emotion-1 emotion-26 bb-Box bb-List"
  >
    <li
      class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
    >
      Item 1
    </li>
    <li
      class="emotion-0 emotion-1 emotion-14 bb-Box bb-ListItem"
    >
      Item 2
    </li>
    <ul
      class="emotion-6 emotion-1 emotion-23 bb-Box bb-List"
    >
      <li
        class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
      >
        Item 1
      </li>
      <li
        class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
      >
        Item 2
      </li>
    </ul>
  </ul>
</div>
`;

exports[`theming List.Item.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-12 {
  list-style: unset;
  list-style-type: none;
}

.emotion-12 .emotion-12 {
  margin-left: 1rem;
}

.emotion-12 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-0 {
  background-color: var(--bb-palette-red,#ff0000);
}

<ul
  class="emotion-12 emotion-1 emotion-2 bb-Box bb-List"
>
  <li
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
  >
    Item One
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
  >
    Item Two
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
  >
    Item Three
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
  >
    Item Four
  </li>
</ul>
`;

exports[`theming List.base should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-12 {
  list-style: unset;
  list-style-type: none;
}

.emotion-12 .emotion-12 {
  margin-left: 1rem;
}

.emotion-12 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-12 {
  background-color: var(--bb-palette-red,#ff0000);
}

<ul
  class="emotion-12 emotion-1 emotion-2 bb-Box bb-List"
>
  <li
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
  >
    Item One
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
  >
    Item Two
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
  >
    Item Three
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
  >
    Item Four
  </li>
</ul>
`;

exports[`theming List.ordered should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-12 {
  list-style: unset;
  list-style-type: none;
}

.emotion-12 .emotion-12 {
  margin-left: 1rem;
}

.emotion-12 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-12 {
  list-style-type: decimal;
}

.emotion-12 .emotion-12 {
  list-style-type: lower-alpha;
}

.emotion-12 .emotion-12 .emotion-12 {
  list-style-type: lower-roman;
}

.emotion-12 {
  background-color: var(--bb-palette-red,#ff0000);
}

<ol
  class="emotion-12 emotion-1 emotion-2 bb-Box bb-List"
>
  <li
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
  >
    Item One
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
  >
    Item Two
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
  >
    Item Three
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
  >
    Item Four
  </li>
</ol>
`;

exports[`theming List.ordered should render correctly 2`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 .bb-Icon {
  vertical-align: -0.125em;
}

.emotion-12 {
  list-style: unset;
  list-style-type: none;
}

.emotion-12 .emotion-12 {
  margin-left: 1rem;
}

.emotion-12 li:not(:last-child) {
  margin-bottom: 0.25rem;
}

.emotion-12.emotion-12.emotion-12 li {
  display: inline-block;
  margin-bottom: unset;
}

.emotion-12.emotion-12.emotion-12 li:not(:last-child) {
  margin-right: 1rem;
}

.emotion-12 {
  background-color: var(--bb-palette-red,#ff0000);
}

<ul
  class="emotion-12 emotion-1 emotion-2 bb-Box bb-List"
>
  <li
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
  >
    Item One
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
  >
    Item Two
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
  >
    Item Three
  </li>
  <li
    class="emotion-0 emotion-1 emotion-2 bb-Box bb-ListItem"
  >
    Item Four
  </li>
</ul>
`;
